--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -14,7 +14,7 @@
 {% block content %}
   <div class="container mt-4">
     <!-- 导航 -->
-    <div class="row">
+    <div class="row mb-4">
       <div class="col-12">
         <div class="d-flex justify-content-between align-items-center mb-4">
           <h2><i class="fas fa-compass"></i> 工作室导航</h2>
