--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -31,10 +31,7 @@
         <div class="d-flex justify-content-between align-items-center mb-4">
           <h2><i class="fas fa-project-diagram"></i> 项目管理</h2>
           <div>
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addProjectModal">
-              <i class="fas fa-plus"></i>
-              添加项目
-            </button>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addProjectModal"><i class="fas fa-plus"></i> 添加项目</button>
           </div>
         </div>
       </div>
