--- a/templates/admin/studio_info.html
+++ b/templates/admin/studio_info.html
@@ -72,10 +72,7 @@
       <div class="col-lg-6">
         <div class="card h-100">
           <div class="card-header">
-            <h5 class="mb-0 d-flex align-items-center">
-              <i class="fas fa-edit me-2"></i>
-              编辑工作室信息
-            </h5>
+            <h5 class="mb-0 d-flex align-items-center"><i class="fas fa-edit me-2"></i> 编辑工作室信息</h5>
           </div>
           <div class="card-body">
             <form id="studioInfoForm" class="needs-validation" novalidate>
@@ -133,10 +130,7 @@
       <div class="col-lg-6 mt-4 mt-lg-0">
         <div class="card h-100">
           <div class="card-header">
-            <h5 class="mb-0 d-flex align-items-center">
-              <i class="fas fa-eye me-2"></i>
-              信息预览
-            </h5>
+            <h5 class="mb-0 d-flex align-items-center"><i class="fas fa-eye me-2"></i> 信息预览</h5>
           </div>
           <div class="card-body d-flex flex-column justify-content-center">
             <div class="text-center mb-4">
