--- a/templates/modals/uploadDocModal.html
+++ b/templates/modals/uploadDocModal.html
@@ -1,6 +1,6 @@
 <!-- 上传文档模态框 -->
 <div class="modal fade" id="uploadDocModal" tabindex="-1" aria-labelledby="uploadDocModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="uploadDocModalLabel"><i class="fas fa-upload"></i> 上传文档</h5>
@@ -23,7 +23,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-primary" id="uploadDocBtn">上传</button>
+        <button type="button" class="btn btn-success" id="uploadDocBtn"><i class="fas fa-upload"></i> 上传</button>
       </div>
     </div>
   </div>
