--- a/templates/project_docs_list.html
+++ b/templates/project_docs_list.html
@@ -119,7 +119,7 @@
                         <!-- 操作 -->
                         <td>
                           <div class="btn-group btn-group-sm" role="group">
-                            <a href="{{ url_for('project_doc_view', project_id=project.id, filename=file.path) }}" class="btn btn-outline-primary" title="查看文档"><i class="fas fa-eye"></i></a>
+                            <a href="{{ url_for('projects.project_doc_view', project_id=project.id, filename=file.path) }}" class="btn btn-outline-primary" title="查看文档"><i class="fas fa-eye"></i></a>
                             {% if current_user.id == project.author_id %}
                               <button class="btn btn-outline-info edit-doc" data-doc-path="{{ file.path }}" title="编辑文档"><i class="fas fa-edit"></i></button>
                               <button class="btn btn-outline-danger delete-doc" data-doc-path="{{ file.path }}" title="删除文档"><i class="fas fa-trash"></i></button>
